grpc-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: grpc-sample2-yaml
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: MyApp
    spec:
      containers:
      - name: grpc-sample
        image: maruftuhin/server_grpc_sample
        ports:
        - containerPort: 8088
